chore: Add new endpoints for user signup and retrieval by ID and JWT
