# backend/swagger/swagger.json
@@ -95,7 +95,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/repositories.CreateUserRequest"
+                            "$ref": "#/definitions/repositories.SignUpRequest"
                         }
                     }
                 ],
@@ -103,7 +103,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/repositories.Response200CreateUser"
+                            "$ref": "#/definitions/repositories.UserResponse200"
                         }
                     },
                     "400": {
@@ -260,7 +260,7 @@
                 }
             }
         },
-        "repositories.CreateUserRequest": {
+        "repositories.SignUpRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -292,32 +292,10 @@
                 }
             }
         },
-        "repositories.Response200CreateUser": {
-            "type": "object",
-            "properties": {
-                "folio": {
-                    "type": "string",
-                    "format": "string",
-                    "example": ""
-                },
-                "mensaje": {
-                    "type": "string",
-                    "format": "string",
-                    "example": "Operación realizada con éxito"
-                },
-                "result": {
-                    "$ref": "#/definitions/repositories.User"
-                }
-            }
-        },
-        "repositories.User": {
+        "repositories.UserModel": {
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "integer",
-                    "example": 1618312800
-                },
-                "delete_at": {
                     "type": "integer",
                     "example": 1618312800
                 },
@@ -336,6 +314,24 @@
                 "updated_at": {
                     "type": "integer",
                     "example": 1618312800
+                }
+            }
+        },
+        "repositories.UserResponse200": {
+            "type": "object",
+            "properties": {
+                "folio": {
+                    "type": "string",
+                    "format": "string",
+                    "example": ""
+                },
+                "mensaje": {
+                    "type": "string",
+                    "format": "string",
+                    "example": "Operación realizada con éxito"
+                },
+                "result": {
+                    "$ref": "#/definitions/repositories.UserModel"
                 }
             }
         }
